<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/splashBackgroundStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screens.login.LoginFragment">


            <TextView
                android:id="@+id/textView3"
                style="@style/SignInSignUpHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_64"
                android:text="@string/welcome_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                style="@style/SignInSignUpHeaderTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:text="@string/please_sign_in_to_your_account"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                style="@style/SignInSignUpHeaderTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/forgot_password"
                app:layout_constraintEnd_toEndOf="@+id/text_input_password"
                app:layout_constraintTop_toBottomOf="@+id/text_input_password" />

            <TextView
                android:id="@+id/textView6"
                style="@style/SignInSignUpHeaderTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/don_t_have_an_account"
                app:layout_constraintStart_toStartOf="@+id/button_sign_with_google"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_with_google" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_70"
                android:layout_marginEnd="@dimen/dimen_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_80"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                app:layout_constraintEnd_toEndOf="@+id/text_input_email"
                app:layout_constraintStart_toStartOf="@+id/text_input_email"
                app:layout_constraintTop_toBottomOf="@+id/text_input_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_80"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_in"
                style="@style/ButtonStyle.SignIn"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_80"
                android:layout_marginTop="@dimen/dimen_32"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/text_input_password"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_with_google"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_80"
                style="@style/ButtonStyle.WithGoogle"
                android:text="@string/sign_in_with_google"
                app:icon="@drawable/ic_google_icon"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
                app:layout_constraintStart_toStartOf="@+id/button_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_navigate_to_sign_up"
                style="@style/TextButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_animation"
                android:visibility="gone"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toEndOf="@+id/text_input_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="false"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="736dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>