<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/splashBackgroundStyle"
        tools:context=".screens.signup.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                style="@style/SignInSignUpHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_64"
                android:text="@string/create_new_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                style="@style/SignInSignUpHeaderTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:text="@string/please_fill_in_the_form_to_continue"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_sign_up_name"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_sign_up_name"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_80"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_sign_up_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/dimen_8"
                app:layout_constraintTop_toBottomOf="@id/text_input_sign_up_name"
                app:layout_constraintStart_toStartOf="@id/text_input_sign_up_name"
                app:layout_constraintEnd_toEndOf="@id/text_input_sign_up_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_sign_up_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_80"
                    style="@style/TextInputEditTextStyle"
                    android:inputType="number"
                    android:hint="@string/phone_number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_sign_up_email"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                app:layout_constraintEnd_toEndOf="@+id/text_input_sign_up_phone"
                app:layout_constraintStart_toStartOf="@+id/text_input_sign_up_phone"
                app:layout_constraintTop_toBottomOf="@id/text_input_sign_up_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_sign_up_email"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_80"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_sign_up_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/dimen_8"
                app:layout_constraintTop_toBottomOf="@id/text_input_sign_up_email"
                app:layout_constraintStart_toStartOf="@id/text_input_sign_up_email"
                app:layout_constraintEnd_toEndOf="@id/text_input_sign_up_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_80"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    style="@style/TextInputEditTextStyle" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_up"
                style="@style/ButtonStyle.SignIn"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_80"
                android:layout_marginTop="@dimen/dimen_80"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="@+id/text_input_sign_up_password"
                app:layout_constraintStart_toStartOf="@+id/text_input_sign_up_password"
                app:layout_constraintTop_toBottomOf="@id/text_input_sign_up_password" />

            <TextView
                android:id="@+id/textView7"
                style="@style/SignInSignUpHeaderTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/have_an_account"
                app:layout_constraintStart_toStartOf="@+id/button_sign_up"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_navigate_to_sign_in"
                style="@style/TextButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim_sign_up"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toEndOf="@+id/text_input_sign_up_email"
                app:layout_constraintStart_toStartOf="@+id/text_input_sign_up_email"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="false"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="736dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>