<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/splashBackgroundStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screens.profile.ProfileFragment">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/profileImageCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp">

                    <ImageView
                        android:id="@+id/image_profile"
                        android:layout_width="@dimen/dimen_70"
                        android:layout_height="@dimen/dimen_70"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_name_initials"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_8"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:layout_marginEnd="@dimen/dimen_8"
                        android:layout_marginBottom="@dimen/dimen_8"
                        android:textAlignment="center"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="AG"
                        style="@style/profileNameInitialStyle" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/text_display_name"
                style="@style/MovieTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                app:layout_constraintStart_toStartOf="@+id/materialCardView2"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
                tools:text="Agyare Geoffrey" />

            <TextView
                android:id="@+id/text_email"
                style="@style/MovieGenreTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/text_display_name"
                app:layout_constraintTop_toBottomOf="@+id/text_display_name"
                tools:text="agyaregeoffrey@gmail.com" />

            <TextView
                android:id="@+id/text_phone"
                style="@style/MovieGenreTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/text_email"
                app:layout_constraintTop_toBottomOf="@id/text_email"
                tools:text="@string/phone" />

            <TextView
                android:id="@+id/text_watched"
                style="@style/MovieTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="20"
                app:layout_constraintStart_toStartOf="@+id/text_phone"
                app:layout_constraintTop_toBottomOf="@+id/text_phone" />

            <TextView
                android:id="@+id/text_view_favorites"
                style="@style/MovieGenreTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:text="@string/favorites"
                app:layout_constraintBottom_toBottomOf="@+id/text_watched"
                app:layout_constraintStart_toEndOf="@+id/text_watched"
                app:layout_constraintTop_toTopOf="@+id/text_watched" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_out"
                style="@style/TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="64dp"
                android:text="@string/sign_out"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_favorites" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>